<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guardFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".GuardScreen">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="70sp"
            android:layout_margin="@dimen/_16sp"
            android:text="@string/security"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/pink_card"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="16dp"
            app:cardElevation="@dimen/_16sp"
            app:cardBackgroundColor="@color/PInkliht"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="16dp">

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/sos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="70sp"
            android:text="@string/sos"
            android:textColor="#FFFFFF"
            android:textSize="24sp"

            app:layout_constraintStart_toStartOf="@+id/pink_card"
            app:layout_constraintTop_toTopOf="@+id/pink_card" />

        <TextView
            android:id="@+id/sos_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="70sp"
            android:text="@string/in_case_of_emergency_contact_me_"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/sos_img"
            app:layout_constraintEnd_toEndOf="@id/pink_card"
            app:layout_constraintEnd_toStartOf="@+id/sos_img"
            app:layout_constraintStart_toStartOf="@id/pink_card"
            app:layout_constraintTop_toTopOf="@+id/sos_img" />

        <TextView
            android:id="@+id/guard_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="70sp"
            android:text="@string/in_case_of_emergency_coctact_me"
            android:textColor="#fff"
            android:textSize="18sp"

            app:layout_constraintBottom_toBottomOf="@+id/guard_img"
            app:layout_constraintEnd_toEndOf="@id/green_card"
            app:layout_constraintEnd_toStartOf="@id/guard_img"

            app:layout_constraintStart_toStartOf="@id/green_card"
            app:layout_constraintTop_toTopOf="@+id/guard_img" />

        <ImageView
            android:id="@+id/sos_img"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/tv"
            android:src="@drawable/ic_sos"
            android:elevation="@dimen/_16sp"
            app:layout_constraintBottom_toBottomOf="@id/pink_card"
            app:layout_constraintEnd_toEndOf="@+id/pink_card"
            app:layout_constraintTop_toTopOf="@id/pink_card"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/guard_img"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_margin="16dp"
            android:elevation="70dp"
            android:src="@drawable/ic_guard"

            app:layout_constraintBottom_toBottomOf="@+id/green_card"
            app:layout_constraintEnd_toEndOf="@+id/green_card"
            app:layout_constraintTop_toTopOf="@id/green_card" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/green_card"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="16dp"
            android:layout_marginTop="12dp"
            app:cardElevation="@dimen/_16sp"
            app:cardBackgroundColor="@color/lgreen"
            app:cardCornerRadius="16dp"
            app:layout_constraintTop_toBottomOf="@+id/pink_card"
            tools:layout_editor_absoluteX="16dp">


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/guard"
            android:layout_width="wrap_content"
            android:elevation="70sp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/Guard"
            android:textColor="#EBE9E9"
            android:textSize="24sp"

            app:layout_constraintStart_toStartOf="@+id/green_card"
            app:layout_constraintTop_toTopOf="@+id/green_card" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>